SampleMicroService/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: django-relation-server-ingress
  labels:
    app: django-relation-server
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: relation-server-svc
            servicePort: 8000
